--- a/action.yml
+++ b/action.yml
@@ -8,32 +8,31 @@ branding:
 
 inputs:
 
-  tag:
-    description: 'The GitHub releases tag that points to JReleaser''s executable JAR file.'
+  version:
+    description: 'The version of JReleaser to download and execute.'
     default: 'early-access'
     required: true
 
-  jar:
-    description: 'The name of the executable JAR file to download and execute.'
-    default: 'jreleaser-tool-provider-0.1.0-SNAPSHOT.jar'
-    required: true
-
   arguments:
-    description: 'The arguments to be passed to JReleaser.'
+    description: 'The command-line arguments to be passed to JReleaser.'
     default: 'full-release'
     required: true
 
 runs:
   using: 'composite'
   steps:
-    - name: 'Initialize JReleaser'
+    - name: 'Download JReleaser'
       shell: bash
       run: |
-        echo "Initialize JReleaser"
-        wget https://github.com/jreleaser/jreleaser/releases/download/${{ inputs.tag }}/${{ inputs.jar }}
+        echo "::group::Download JReleaser"
+        JAR="jreleaser-tool-provider-${{ inputs.version }}.jar"
+        URL="https://github.com/jreleaser/jreleaser/releases/download/${{ inputs.version }}/$JAR"
+        java ${{ github.action_path }}/copy.java $URL $JAR
+        java -jar $JAR --version
         echo "::endgroup::"
-    - name: 'Launch JReleaser'
+    - name: 'Execute JReleaser'
       shell: bash
       run: |
-        echo "java -jar ${{ inputs.jar }} ${{ inputs.arguments }}"
-        java -jar ${{ inputs.jar }} ${{ inputs.arguments }}
+        JAR="jreleaser-tool-provider-${{ inputs.version }}.jar"
+        echo "java -jar $JAR ${{ inputs.arguments }}"
+        java -jar $JAR ${{ inputs.arguments }}
