--- a/action.yml
+++ b/action.yml
@@ -27,7 +27,7 @@ runs:
         echo "::group::Download JReleaser"
         JAR="jreleaser-tool-provider-${{ inputs.version }}.jar"
         URL="https://github.com/jreleaser/jreleaser/releases/download/${{ inputs.version }}/$JAR"
-        java ${{ github.action_path }}/copy.java $URL $JAR
+        java "${{ github.action_path }}/copy.java" $URL $JAR
         java -jar $JAR --version
         echo "::endgroup::"
     - name: 'Execute JReleaser'
