--- a/action.yml
+++ b/action.yml
@@ -25,14 +25,12 @@ runs:
       shell: bash
       run: |
         echo "::group::📦 Download JReleaser"
-        JAR="jreleaser-tool-provider-${{ inputs.version }}.jar"
-        URL="https://github.com/jreleaser/jreleaser/releases/download/${{ inputs.version }}/$JAR"
-        java "${{ github.action_path }}/copy.java" $URL $JAR
-        java -jar $JAR --version
+        java "${{ github.action_path }}/copy.java" ${{ inputs.version }}
+        java -jar jreleaser-cli.jar --version
         echo "::endgroup::"
+
     - name: 'Execute JReleaser'
       shell: bash
       run: |
-        JAR="jreleaser-tool-provider-${{ inputs.version }}.jar"
-        echo "☕ java -jar $JAR ${{ inputs.arguments }}"
-        java -jar $JAR ${{ inputs.arguments }}
+        echo "☕ java -jar jreleaser-cli.jar ${{ inputs.arguments }}"
+        java -jar jreleaser-cli.jar ${{ inputs.arguments }}
