--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,10 @@
 name: Test
 
-on: push
+on:
+  push:
+  workflow_dispatch:
 
 jobs:
-
   test:
     name: 'JReleaser ${{ matrix.tag }}, Java ${{ matrix.java }}, ${{ matrix.os }}'
     strategy:
@@ -15,10 +16,11 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
+
       - uses: actions/setup-java@v1
         with:
           java-version: ${{ matrix.java }}
+
       - uses: ./
         with:
           arguments: --version
-      - run: echo "Here be assertions and dragons..."
