Refine boolean evaluation for setup-java. Fixes #10

--- a/action.yml
+++ b/action.yml
@@ -37,7 +37,7 @@ runs:
   steps:
     - name: 'Setup Java'
       uses: actions/setup-java@v3
-      if: ${{ inputs.setup-java }} == 'true'
+      if: ${{ inputs.setup-java == 'true' }}
       with:
         java-version: 17
         distribution: 'zulu'
