--- a/action.yml
+++ b/action.yml
@@ -52,7 +52,7 @@ runs:
         echo "::endgroup::"
 
     - name: 'Execute JReleaser'
-      shell: pwsh
+      shell: bash
       working-directory: ${{ inputs.working-directory }}
       run: |
         echo "☕ java -jar jreleaser-cli.jar ${{ inputs.arguments }}"
