--- a/action.yml
+++ b/action.yml
@@ -1,3 +1,21 @@
+#
+# SPDX-License-Identifier: Apache-2.0
+#
+# Copyright 2020-2023 The JReleaser authors.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     https://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
+
 name: JReleaser
 
 description: 'Release Java projects quickly and easily with JReleaser'
@@ -36,7 +54,7 @@ runs:
   using: 'composite'
   steps:
     - name: 'Setup Java'
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@5ffc13f4174014e2d4d4572b3d74c3fa61aeb2c2 # v 3.11.0
       if: ${{ inputs.setup-java == 'true' }}
       with:
         java-version: 17
