--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,11 +15,12 @@ jobs:
         tag: [ early-access ]
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v4
         with:
           java-version: ${{ matrix.java }}
+          distribution: 'zulu'
 
       - uses: ./
         with:
