--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,13 +6,12 @@ on:
 
 jobs:
   test:
-    name: 'JReleaser ${{ matrix.tag }}, Java ${{ matrix.java }}, ${{ matrix.os }}'
+    name: 'Java ${{ matrix.java }} on ${{ matrix.os }}'
     strategy:
       fail-fast: false
       matrix:
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
-        java: [ 11 ]
-        tag: [ early-access ]
+        os: [ ubuntu-latest, macos-latest, macos-14, windows-latest ]
+        java: [ 11, 17, 21 ]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
@@ -20,7 +19,7 @@ jobs:
       - uses: actions/setup-java@v4
         with:
           java-version: ${{ matrix.java }}
-          distribution: 'zulu'
+          distribution: zulu
 
       - uses: ./
         with:
